# RK3399Pro_npu

rknn-api/examples/c_demos/dr_detecor/: CMakeLists.txt  build_linux_cross.sh  build_linux_native.sh  build_linux_native_pc.sh  build_linux_native_tb3399pro.sh
rknn-api/examples/c_demos/dr_detecor/include/: dr_detector.h  rk_npu_detector.h
rknn-api/examples/c_demos/dr_detecor/src/: dr_detector.cpp  dr_main.cpp  rk_npu_detector.cpp
rknn-api/examples/c_demos/opencv_test/: CMakeLists.txt  build_linux_cross.sh  cam_test.cpp  data_format.cpp
rknn-api/examples/c_demos/rknn_yolov5_demo/: README.md  build_linux_native.sh
